--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 
     </div> <!-- /container -->
 
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="js/jQuery.js"></script>
+    <script src="js/angularJS.js"></script>
+    <script src="js/angular-route.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
